- Fix bug #29523 (ReflectionParameter::isOptional() is incorrect)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@165335 c90b9560-bf6c-de11-be94-00142212c4b1